# Nerds-Snakes

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
NerdsSnakes/: CMakeLists.txt  main.cpp
NerdsSnakes/game/: MainMenuState.cpp  game.cpp
Snakes/: CMakeLists.txt  board.cpp  game_object.cpp  main.cpp  snake.cpp
include/: board.h  game_object.h  snake.h
includes/game/: Game.h  GameState.h  MainMenuState.h  game.h
