# CMakeList.txt : CMake project for Snakes, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Snakes "main.cpp" "snake.cpp" "board.cpp")

# TODO: Add tests and install targets if needed.
